--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "topcoat-switch": "~0.1.4",
     "topcoat-switch-base": "~0.1.0",
     "topcoat-range-base": "0.0.3",
-    "topcoat-theme": "~0.6.4",
+    // "topcoat-theme": "~0.6.4",
+    "topcoat-theme": "https://github.com/collectmeaustralia/theme.git#theme-collectme"
     "topcoat-utils": "~0.2.0",
     "topcoat-search-input": "~0.3.3",
     "topcoat-range": "~0.2.0"
